--- a/templates/driver/banner.html.twig
+++ b/templates/driver/banner.html.twig
@@ -4,9 +4,7 @@
     
     <a class="btn btn--ordering" href="{{ path('claim_create') }}"
     style="bottom:50px;">
-        <i class="fas fa-motorcycle"></i>
-        &nbsp;
-        Commander une course
+        <i class="fas fa-motorcycle"></i>&nbsp;Commander une course
     </a>
     
     <!-- internal page menu, to navigate to ID -->
