--- a/templates/flatrate/_delete_form.html.twig
+++ b/templates/flatrate/_delete_form.html.twig
@@ -6,7 +6,6 @@
     <button class="btn btn-sm btn--red" href="{{ path('flatrate_delete', {'flatrate': flatrate.id}) }}"
         title="Supprimer" type='submit'
     >
-        <i class="ri-delete-bin-6-line"></i>
-        Supprimer
+        <i class="ri-delete-bin-6-line"></i>&ensp;Supprimer
     </button>
 </form>
