--- a/templates/mailer/index.html.twig
+++ b/templates/mailer/index.html.twig
@@ -19,8 +19,7 @@
         </h4>
         <br>
         <a href="{{ path('app_logout') }}" class="btn btn-sm btn--blue">
-            <i class="ri-home-2-line"></i>
-            Retour à l'accueil
+            <i class="ri-home-2-line"></i>&ensp;Retour à l'accueil
         </a>
     <!-- </div> -->
 </div>
