--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -8,6 +8,91 @@
 <!-- Admin Controller banner -->
 {{ include('admin/banner.html.twig') }}
 
+{% if allcompaniesunknown is defined and allcompaniesunknown is not empty %}
+<div class="paragraph--large">
+    <table class="table table-striped table--txtlight">
+        <h2 class="title--h2" id="flatrates--title">T3P nouvellement référencée(s) à confirmer...</h2>
+        <thead class="thead--dark">
+            <tr>
+                <th style="width:5%;"></th>
+                <th>Nom</th>
+                <th>SIREN</th>
+                <th>NIC</th>
+                <th>N° et voie</th>
+                <th>CP</th>
+                <th>Ville</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for obCompany in allcompaniesunknown %}
+            <tr>
+                <td></td>
+                <td>{{ obCompany.name }}</td>
+                <td>{{ obCompany.siren }}</td>
+                <td>{{ obCompany.nic }}</td>
+                <td>{{ obCompany.road }}</td>
+                <td>{{ obCompany.zip }}</td>
+                <td>{{ obCompany.city }}</td>
+                <td class="d-flex flex-row">
+                    <a class="btn btn-sm btn--blue" href="{{ path('company_confirm', {'company': obCompany.id}) }}" title="Modifier" class="mr-2">
+                        <i class="ri-award-fill"></i>&ensp;Confirmer
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="8"></td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+{% endif %}
+
+
+{% if alldriversunverified is defined and alldriversunverified is not empty %}
+<div class="paragraph--large">
+    <table class="table table-striped table--txtlight">
+        <h2 class="title--h2" id="flatrates--title">Pilote(s) nouvellement référencé(s) à vérifier...</h2>
+        <thead class="thead--dark">
+            <tr>
+                <th style="width:10%;"></th>
+                <th>Nom / Prénom</th>
+                <th>N° VMDTR</th>
+                <th>T3P</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+
+            {% for obDriver in alldriversunverified %}
+            <tr>
+                <td></td>
+                <td>{{ obDriver.user.lastname~' / '~obDriver.user.firstname }}</td>
+                <td>
+                    <a href=""></a>
+                    {{ obDriver.vmdtrnumber }}
+                </td>
+                <td>{{ obDriver.company.name }}</td>
+                <td class="d-flex flex-row">
+                    <a class="btn btn-sm btn--blue" href="{{ path('company_confirm', {'company': obDriver.id}) }}" title="Modifier" class="mr-2">
+                        <i class="ri-award-fill"></i>&ensp;Confirmer
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="4"></td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+{% endif %}
+
 Controle de l'existance d'une entreprise :
 https://avis-situation-sirene.insee.fr/
 
