--- a/templates/flatrate/banner.html.twig
+++ b/templates/flatrate/banner.html.twig
@@ -3,9 +3,7 @@
     <H1>TARIFS</H1>
     
     <a class="btn btn--ordering" href="{{ path('claim_create') }}" style="bottom:25px;">
-        <i class="fas fa-motorcycle"></i>
-        &nbsp;
-        Commander une course
+        <i class="fas fa-motorcycle"></i>&nbsp;Commander une course
     </a>
 </section>
 <!-- FIN Flatrate banner -->
