--- a/templates/flatrate/index.html.twig
+++ b/templates/flatrate/index.html.twig
@@ -30,7 +30,7 @@
     <h2 class="title--h2" id="flatrates--title">Les tarifs...</h2>
     {% if flatrates %}
     <table class="table table-striped table--txtlight">
-        <thead class="thead--light">
+        <thead class="thead--dark">
             <tr>
                 <th style="width:5%;"></th>
                 <th>Région / Dépt.</th>
