--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -16,9 +16,7 @@
         <H1>L'ANNUAIRE DES TAXIS-MOTO DE FRANCE</H1>
         
         <a class="btn btn--ordering" href="{{ path('claim_create') }}">
-            <i class="fas fa-motorcycle"></i>
-            &nbsp;
-            Commander une course
+            <i class="fas fa-motorcycle"></i>&nbsp;Commander une course
         </a>
         
         <!-- internal page menu, to navigate to ID -->
