--- a/templates/profile/banner.html.twig
+++ b/templates/profile/banner.html.twig
@@ -3,9 +3,7 @@
     <H1>TABLEAU DE BORD</H1>
     
     <a class="btn btn--ordering" href="{{ path('claim_create') }}">
-        <i class="fas fa-motorcycle"></i>
-        &nbsp;
-        Commander une course
+        <i class="fas fa-motorcycle"></i>&nbsp;Commander une course
     </a>
     
     <!-- internal page menu, to navigate to ID -->
