--- a/templates/profile/changepicture.html.twig
+++ b/templates/profile/changepicture.html.twig
@@ -9,7 +9,7 @@
     {{ include('profile/banner.html.twig') }}
     <form class="modal--big container-fluid" method="post" enctype="multipart/form-data">
         
-{% if msg_info %}
+{% if msg_info is defined and msg_info is not null %}
 <div class="alert alert-warning" role="alert" style="width:100%;">{{ msg_info }}</div>
 {% endif %}
 
@@ -73,12 +73,10 @@
         <br>
         <div class="btns--row">
             <button class="btn btn-sm btn--blue" type="submit">
-                <i class="ri-cursor-line"></i>
-                Sélectionner
+                <i class="ri-cursor-line"></i>&ensp;Sélectionner
             </button>
             <a class="btn btn-bg btn--secondary btn-return" href="{{ path('profile_user',{'id': app.user.id}) }}">
-                <i class="ri-close-fill"></i>
-                Annuler
+                <i class="ri-close-fill"></i>&ensp;Annuler
             </a>
         </div>
     </form>
