--- a/templates/profile/changepwd.html.twig
+++ b/templates/profile/changepwd.html.twig
@@ -13,13 +13,13 @@
 
 		<div>
 			<label class="required" for="inputPassword">Saisir votre mot de passe actuel :</label>
-			<input type="password" id="inputPassword"
+			<input type="password" id="inputPassword" class="form-control"
 				placeholder="Mot de passe actuel..." name="password-old" required
 			>
 			{% if verify_password_error %}
 			<span class="d-block">
-				<span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-				<span class="form-error-message">... mot de passe erroné.</span>
+				<small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+				<small class="form-error-message">... mot de passe erroné.</small>
 			</span>
 			{% endif %}
 			{#{{ form_help(changePwdForm.email)}}#}
@@ -31,11 +31,11 @@
 						)
 			}}
 		</div>
-		<span>A l'issue de la redéfinition de votre mot de passe, il vous faudra vous reconnecter...</span>
+		<small>A l'issue de la redéfinition de votre mot de passe, il vous faudra vous reconnecter...</small>
 		<br>
 		<div class="btns--row">
 			<button class="btn btn-sm btn--blue" type="submit">Soumettre</button>
-			<a class="btn btn-sm btn--secondary" href="{{ path('profile_user',{'id': app.user.id}) }}">Annuler</a>
+			<a class="btn btn-sm btn--secondary" href="{{ path('profile_user',{'id': app.user.id}) }}"><i class="ri-close-fill"></i>&ensp;Annuler</a>
 		</div>
 		{{ form_end(changePwdForm) }}
     </form>
