--- a/templates/profile/customer.html.twig
+++ b/templates/profile/customer.html.twig
@@ -6,9 +6,330 @@
 {% block body %}
 
     {{ include('profile/banner.html.twig') }}
-    
-    {% if app.user %}
-Proposer ici au client de gérer ses "commande de courses", réponses à devis, et autres...
+
+    {#
+    {% if msg_info %}
+    <div class="alert alert-info" role="alert">{{ msg_info }}</div>
     {% endif %}
+    #}
+
+    {#<!-- <section id="regions_json" hidden>{{ JSgetregions() }}</section> -->#}
+    {#<!-- <section id="dpts_json" hidden>{{ JSgetdpts() }}</section> -->#}
+    <section id="cities_json" hidden>
+        {{ JSgetcities() }}
+    </section>
+    
+    <div class="paragraph--large" id="div--2hide-ifmodal">
+    
+        <!-- L'adresse postale -->
+        <form class="card--3D-vertical my-4" method="post"><!--class="d-flex flex-row justify-content-center my-4">-->
+            <h2 class="h3 ml-4 mt-4 mb-3 font-weight-normal">Adresse personnelle :</h2>
+            <!-- Bloc adresse du Customer -->
+            <div class="block--datas-horizontal mx-3">
+                <div class="col-12 col-md-5">
+                    <label class="required" for="inputroad">N° et Voie :</label>
+                    <input type="text" class="form-control" id="inputroad"
+                        value="{{ app.user.customer.road }}"
+                        name="customer_road" required
+                    ><!-- autofocus> -->
+                    {% if error_customer_road is defined and error_customer_road is not null %}
+                    <span class="d-block">
+                        <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                        <small class="form-error-message">La voie doit comporter un numéro et un nom.</small>
+                    </span>
+                    {% endif %}
+                    <!-- &nbsp; -->
+                </div>
+                &nbsp;
+                <div class="col-12 col-md-3">
+                    <label class="required" for="inputcity">Commune :</label>
+                    <input type="text" class="form-control inputcity" id="inputcity"
+                        value="{{ app.user.customer.city }}"
+                        name="customer_city"
+                    >
+                    <!-- required -->
+                    <select class="form-control cities" id="inputcities"
+                        name="cities" title="cities"
+                    >
+                        <option value="Select your city">Sélectionnez votre commune</option>
+                    </select>
+                    {% if error_customer_city is defined and error_customer_city is not null %}
+                    <span class="d-block">
+                        <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                        <small class="form-error-message">La ville doit-être spécifiée.</small>
+                    </span>
+                    {% endif %}
+                </div>
+                &nbsp;
+                <div class="col-12 col-md-3">
+                    <label class="required" for="inputzip">Code postal :</label>
+                    <input type="text" class="form-control" id="inputzip"
+                        value="{{ app.user.customer.zip }}"
+                        name="customer_zip" style="display:none;"
+                    >
+                    <!-- -->
+                    <input type="text" class="form-control inputzip" id="inputzip2"
+                        value="{{ app.user.customer.zip }}"
+                        name="customer_zip" disabled
+                    >
+                    {#{% if error_customer_zip %}#}
+                    <!-- <span class="d-block">
+                        <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                        <small class="form-error-message">La voie doit comporter un numéro et un nom.</small>
+                    </span> -->
+                    {#{% endif %}#}
+                </div>
+            </div>
+            <br>
+            <!-- rangée de bouton(s) : Mise à jour adresse -->
+            <div class="btns--row">
+                <button class="btn btn-sm btn--blue" type="submit">
+                    <i class="ri-record-circle-line"></i>&ensp;Enregistrer les modifications
+                </button>
+                {#<!-- <a class="btn btn-sm btn--secondary btn-return" href="{{ path('profile_user',{'id': app.user.id}) }}">
+                    <i class="ri-close-fill"></i>&ensp;Annuler
+                </a> -->#}
+            </div>
+        </form>
+
+        <!-- L'historique des échanges -->
+        <div class="d-flex flex-row flex-wrap justify-content-between align-items-center mb-3">
+            <h2 class="h3 mt-4 mb-3 font-weight-normal">Historique des échanges :</h2>
+            <button class="btn btn-sm btn--green" id="btn--show-hide--archive">
+                <i class="ri-eye-line"></i>&ensp;Récents seulement
+            </button>
+        </div>
+        <div class="row--tabtype" id="row--tabtype--travel">
+            <div class="btn--tabtype" id="btn--tabtype--claim" parent_id="row--tabtype--travel" default>Demandes envoyées</div>
+            <div class="btn--tabtype" id="btn--tabtype--tender" parent_id="row--tabtype--travel">Devis reçus</div>
+            <div class="btn--tabtype" id="btn--tabtype--order" parent_id="row--tabtype--travel">Courses effectuées</div>
+        </div>
+        <!-- tableau des Demandes envoyées (Claims) -->
+        <table class="table table-striped table--txtlight table--tabtype" id="table--tabtype--claim" parent_id="btn--tabtype--claim">
+            <thead class="thead--dark">
+                <tr>
+                    <th></th>
+                    <th>#</th>
+                    <th>Demande du</th>
+                    <th>Course pour le</th>
+                    <th>Prise en charge</th>
+                    <th>Destination</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for claim in app.user.customer.getclaims %}
+                    {% if "now" | date("U") - claim.claimdatetime|date('U') < 31536000 %}
+                <tr class="row--claim TOUTES">
+                    {% else %}
+                <tr class="row--claim ARCHIVE">
+                    {% endif %}
+                    <td></td>
+                    <td>{{ claim.id }}</td>
+                    <td>{{ claim.claimdatetime|date('d/m/Y') }}</td>
+                    <td>{{ claim.journeydate|date('d/m/Y') }}</td>
+                    <td>{{ getcitybyzip(claim.fromzip).name }}</td>
+                    <td>{{ getcitybyzip(claim.tozip).name }}</td>
+                    <td>
+                        <div class="d-flex flex-row flex-wrap align-items-center">
+                            <button class="btn btn-sm btn--blue btn--claim--viewdetails" id="{{ 'btn--claim--viewdetails'~claim.id }}" claim_id="{{ claim.id }}">
+                                <i class="ri-eye-line"></i>&ensp;Détails
+                            </button>
+                            &ensp;
+                            {% if claim.tenders|length < 0 %}
+                            {#
+                            {% if claim.tenders|length > 0 %}
+                            <button class="btn btn-sm btn--blue" claim_id="{{ claim.id }}">
+                                <i class="ri-file-paper-2-line"></i>&ensp;{{ claim.tenders|length }}&ensp;Devis
+                            </button>
+                            <!-- id="btn--claim--viewtenders" -->
+                            {% else %}
+                            #}
+                            Aucun devis proposé
+                            {% endif %}
+                        </div>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+            <tfoot>
+                {% if app.user.customer.getclaims|length == 0 %}
+                <tr>
+                    <td colspan="6">Vous n'avez fait encore aucune demande...</td>
+                </tr>
+                {% endif %}
+            </tfoot>
+        </table>
+        <!-- tableau des Devis reçus (Tenders) -->
+        <table class="table table-striped table--txtlight table--tabtype" id="table--tabtype--tender" parent_id="btn--tabtype--tender">
+            <thead class="thead--dark">
+                <tr>
+                    <th></th>
+                    <th>Devis du</th>
+                    <th>Proposé par</th>
+                    <th>Pour la demande du</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {#{% for claim in app.user.customer.getclaim %}
+                    {% if "now" | date("U") - claim.claimdatetime|date('U') < 31536000 %}
+                    #}
+                <tr class="row--claim ARCHIVE">
+                    {#{% else %}#}
+                <tr class="row--claim TOUTES">
+                    {#{% endif %}#}
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>                    
+                    <td> Accepter / Refuser </td>
+                </tr>
+                {#{% endfor %}#}
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="5">Pas de devis reçu...</td>
+                </tr>
+            </tfoot>
+        </table>
+        <!-- tableau des Courses effectuées (Orders) -->
+        <table class="table table-striped table--txtlight table--tabtype" id="table--tabtype--order" parent_id="btn--tabtype--order">
+            <thead class="thead--dark">
+                <tr>
+                    <th></th>
+                    <th>Demande du</th>
+                    <th>Course le</th>
+                    <th>Prise en charge</th>
+                    <th>Destination</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for claim in app.user.customer.getclaims %}
+                    {% if "now" | date("U") - claim.claimdatetime|date('U') < 31536000 %}
+                <tr class="row--claim ARCHIVE">
+                    {% else %}
+                <tr class="row--claim TOUTES">
+                    {% endif %}
+                    <td></td>
+                    
+                    <td> Les boutons !! </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+            <tfoot>
+                {% if app.user.customer.getclaims|length == 0 %}
+                <tr>
+                    <td colspan="4">Vous n'avez encore pas bénéficié des services des pilotes de l'Annuaire...</td>
+                </tr>
+                {% endif %}
+            </tfoot>
+        </table>
+    </div>
+
+    <!-- Modal d'affichage des détails de la demande -->
+    {% for claim in app.user.customer.getclaims %}
+    <div class="modal--big p-5" id="{{ 'modal--claim--'~claim.id }}" style="display:none;">
+        <!-- parent_id="{{ 'btn--claim--viewdetails'~claim.id }}" -->
+        <!-- Les "détails" de la demande -->
+        <h3 class="pb-1">{{ 'Demande : (#'~claim.id~')' }}</h3>
+        <table class="table table-striped table--txtlight">
+            <tbody>
+                <tr>
+                    <th class="thead--dark">Date de la demande</th>
+                    <td>{{ claim.claimdatetime|date('d/m/Y') }}</td>
+                </tr>
+                <tr>
+                    <th class="thead--dark">Jour de la course</th>
+                    <td>{{ claim.journeydate|date('d/m/Y') }}</td>
+                </tr>
+                <tr>
+                    <th class="thead--dark">Prise en charge à l'adresse</th>
+                    <td>{{ claim.fromroad~', '~claim.fromzip~' '~getcitybyzip(claim.fromzip).name }}</td>
+                </tr>
+                <tr>
+                    <th class="thead--dark">Arrivée attendue pour</th>
+                    <td>{{ claim.arrivalattime|date('H:i') }}</td>
+                </tr>
+                <tr>
+                    <th class="thead--dark">A la destination</th>
+                    <td>{{ claim.toroad~', '~claim.tozip~' '~getcitybyzip(claim.tozip).name }}</td>
+                </tr>
+            </tbody>
+        </table>
+        <!-- Les "cartes" des utilisateurs destinataires de la demande... -->
+        {% if claim.drivers %}
+        <h3 class="pt-3">Envoyée à :</h3>
+        <!-- ... la rangée "cartes" des utilisateurs destinataires de la demande... -->
+        <div class="d-flex flex-column align-items-center">
+        <!-- <div class="d-flex flex-row flex-wrap"> -->
+            {% for driver in claim.drivers %}
+            <!-- ... LA "carte utilisateur" à itérer... -->
+            <div class="card--3D-horizontal col-12">
+                <!-- ... photo -->
+                <div class="d-flex flex-row flex-wrap col-12 col-lg-3">
+                    <div class="d-flex flex-row col-4 justify-content-center">
+                        <img class="img--profile justify-self-start" src="{{ asset(getuserportrait(driver.user).pathname) }}" alt="Photo de profil">
+                    </div>
+                    <div class="col-8">
+                        <div><b>Notation :</b></div>
+                        <div class="d-flex flex-row justify-content-start">
+                            <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
+                            <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
+                            <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
+                            <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
+                            <img style='height:15px;' src="{{ asset(sImgPath ~'misc/star_1.png') }}" alt="Etoile notation">
+                        </div>
+                    </div>
+                </div>
+                <!-- ... coordonnées -->
+                <div class="card--horizontal justify-content-between mt-2 col-12 col-lg-9">
+                    <div class="col-12 col-xl-6">
+                        <div class="d-flex flex-row flex-wrap justify-content-between col-12">
+                                <div class="col-sm-12 col-md-6"><b>Nom :</b></div>
+                                <div class="pl-4 col-sm-12 col-md-6">{{ driver.user.lastname~' '~driver.user.firstname }}</div>
+                        </div>
+                        <div class="d-flex flex-row flex-wrap justify-content-between col-12">
+                            <div class="col-sm-12 col-md-6"><b>Courriel :</b></div>
+                            <div class="pl-4 col-sm-12 col-md-6">
+                                <a href="{{ 'mailto:' ~ driver.user.email }}">
+                                    {{ driver.user.email }}
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xl-6">
+                        <div class="d-flex flex-row flex-wrap justify-content-between col-12">
+                            <div class="col-sm-12 col-md-6"><b>Téléphone :</b></div>
+                            <div class="pl-4 col-sm-12 col-md-6">
+                                <a href="{{ 'tel:' ~driver.user.phone }}">
+                                    {{ driver.user.phone }}
+                                </a>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-row flex-wrap justify-content-between col-12">
+                            <div class="col-sm-12 col-md-6"><b>Modèle moto :</b></div>
+                            <div class="pl-4 col-sm-12 col-md-6">{{ driver.motomodel }}</div>
+                        </div>
+                    </div>
+                    &ensp;
+                    {#
+                    <!-- bouton de suppression de la Claim -->
+                    <button class="btn btn-sm btn--blue mt-2" id="btn--send-tender" claim_id="{{ claim.id }}">
+                        <i class="ri-file-shred-line"></i>&ensp;Annuler la demande (A DEVELOPPER OU PAS)
+                    </button>
+                    #}
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+
+        <button class="btn btn-sm btn--secondary mt-5" id="btn--claim--closedetails" parent_id="{{ 'modal--claim--'~claim.id }}">
+            <i class="ri-close-fill"></i>&ensp;Fermer
+        </button>
+    </div>
+    {% endfor %}
 
 {% endblock %}
