--- a/templates/registration/driver.html.twig
+++ b/templates/registration/driver.html.twig
@@ -23,11 +23,6 @@
     {{ dump(allcompaniesknown[0].drivers[0]) }}
     {% endif %}
 #}
-<!-- <section id="regions.json" hidden></section> -->
-<!-- <section id="departments.json" hidden></section> -->
-<section id="cities_json" hidden><!--hidden>-->
-    {{ JSgetcities() }}
-</section>
 
 
 <div class="paragraph--large" method="post"> 
@@ -35,61 +30,8 @@
     <!-- *** DEBUT de la Carte3D *** -->
     <div class="card--3D-vertical">
 
-        <!-- ** Block de listes des entreprises existantes disponibles à la sélection ** -->
-        <div class="mt-1 mb-2 col-12" id="blk--companies2choice">
-            <!-- <div class="mt-1 mb-2 col-lg-12 col-xl-5" id="blk--companies2choice"> -->
-            {% if allcompaniesknown is defined %}
-            <form method="post">
-                <table class="table table-striped table--txtlight">
-                    <thead class="thead--light">
-                        <tr>
-                            <th>Choisir</th>
-                            <th>Nom</th>
-                            <th>SIREN</th>
-                            <th>NIC</th>
-                            <th>Voie</th>
-                            <th>Code postal</th>
-                            <th>Ville</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% for companyknown in allcompaniesknown %}
-                    <tr>
-                        {#{{ dump(companyknown) }}#}
-                        <td>&emsp;
-                            <input type="radio" class="companyknown" name="companychoosen" 
-                                value="{{ companyknown.id }}" id="{{ companyknown.id }}"
-                            ><!-- onClick="showSubmitButton()" -->
-                        </td>
-                        <td><label for="{{ companyknown.id }}">{{ companyknown.name }}</label></td>
-                        <td><label for="{{ companyknown.id }}">{{ companyknown.siren }}</label></td>
-                        <td><label for="{{ companyknown.id }}">{{ companyknown.nic }}</label></td>
-                        <td><label for="{{ companyknown.id }}">{{ companyknown.road }}</label></td>
-                        <td><label for="{{ companyknown.id }}">{{ companyknown.zip }}</label></td>
-                        <td><label for="{{ companyknown.id }}">{{ companyknown.city }}</label></td>
-                    </tr>
-                    {% else %}
-                    <tr>
-                        <td colspan="7">Aucun article trouvé</td>
-                    </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-
-                <!-- Boutons de sortie -->
-                <div class="btns--row">
-                    <button class="btn btn-sm btn--blue" id='btn--associate-company' type="submit">
-                        <i class="ri-record-circle-line"></i>
-                        Associer la société choisie
-                    </button>
-                    <a class="btn btn-bg btn--secondary btn-return" href="{{ path('registration_driver', {'id': app.user.id}) }}">
-                        <i class="ri-close-fill"></i>
-                        Retourner déclarer une nouvelle société
-                    </a>
-                </div>
-            </form>
-            {% endif %}
-        </div>
+        <!-- Common Form to choose Company object in existing list -->
+        {{ include('company/_form-companies.html.twig') }}
 
         <!-- ** FORMULAIRE PRINCIPAL DE CREATION DU PILOTE AVEC SON ENTREPRISE ** -->
         {% set drivercard=getdrivercard(app.user.id) %}
@@ -98,121 +40,9 @@
             <!-- BlockS de données de l'entreprise T3P + données propres au pilote -->
             <div class="d-flex flex-row flex-wrap justify-content-between">
 
-                <!-- Block de données de l'entreprise T3P -->
-                <div class="mt-1 mb-2 col-12 col-lg-5" id="blk--companydatas">
-                    <!-- Titre + boutons (choix parmi les entreprises référencées) -->
-                    <div class="d-flex flex-row flex-wrap justify-content-between align-items-center">
-                        <h5>Entreprise affiliée T3P</h5>
-                        {% if allcompaniesknown is defined and allcompaniesknown|length > 0 %}
-                        <button class="btn btn-sm btn--secondary" type="button" id="btn--companies2choice"
-                            style="border-bottom-left-radius:0;border-bottom-right-radius:0;"
-                        >
-                            <i class="ri-search-line"></i>
-                            &ensp;
-                            Entreprises référencées
-                        </button>
-                        {% endif %}
-                    </div>
-                    <!-- Encadrement -->
-                    <div class="block--datas-vertical" id="block--company-T3P">
-                        <div class="p-3 w-100">
-                            <label class="required" for="inputname">Nom :</label>
-                            <input type="text" name="name" id="inputname" class="form-control"
-                                {% if name is not null %}value="{{ name }}"{% endif %}
-                                required
-                            ><!-- autofocus> -->
-                            {#{% if error_name %}#}
-                            <!-- <span class="d-block">
-                                <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                                <span class="form-error-message">Le numéro ne peut contenir que des chiffres.</span>
-                            </span> -->
-                            {#{% endif %}#}
-                        </div>
-                        <!-- numéro d'enregistrement de l'entreprise -->
-                        <div class="d-flex flex-row flex-wrap justify-content-between w-100">
-                            <div class="col-12 col-md-7">
-                                <label class="required" for="inputsiren">SIREN :</label>
-                                <input type="number" name="siren" id="inputsiren" class="form-control"
-                                    placeholder="9 chiffres..." pattern="[0-9]{9}" size="9"
-                                    {% if siren is not null %}value="{{ siren }}"{% endif %}
-                                    required
-                                ><!-- autofocus> -->
-                                {% if error_siren %}
-                                <span class="d-block">
-                                    <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                                    <span class="form-error-message">Le numéro SIREN doit contenir 9 chiffres.</span>
-                                </span>
-                                {% endif %}
-                            </div>
-                            &ensp;
-                            <div class="col-12 col-md-4">
-                                <label for="inputnic">NIC :</label>
-                                <input type="number" name="nic" id="inputnic" class="form-control"
-                                    placeholder="5 chiffres..." pattern="[0-9]{5}" size="5"
-                                    {% if nic is not null %}value="{{ nic }}"{% endif %} size="5"
-                                ><!-- required autofocus> -->
-                                {#{% if error_nic %}#}
-                                <!-- <span class="d-block">
-                                    <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                                    <span class="form-error-message">Le numéro ne peut contenir que des chiffres.</span>
-                                </span> -->
-                                {#{% endif %}#}
-                            </div>
-                        </div>
-                        <!-- adresse de l'entreprise -->
-                        <div class="d-flex flex-column p-3 w-100">
-                            <span>Adresse :</span>
-                            &ensp;
-                            <!-- <div> -->
-                                <label class="required" for="inputroad">N° et Voie :</label>
-                                <input type="text" {% if road is not null %}value="{{ road }}"{% endif %} name="road" id="inputroad" class="form-control" required ><!-- autofocus> -->
-                                {#{% if error_road %}#}
-                                <!-- <span class="d-block">
-                                    <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                                    <span class="form-error-message">La voie doit comporter un numéro et un nom.</span>
-                                </span> -->
-                                {#{% endif %}#}
-                            <!-- </div> -->
-                            &ensp;
-                            <div class="d-flex flex-row flex-wrap w-100 justify-content-between">
-                                <div class="col-12 col-md-7">
-                                    <label class="required" for="inputcity">Commune :</label>
-                                    <input type="text" class="form-control inputcity required" id="inputcity"
-                                        {% if city is not null %}value="{{ city }}"{% endif %}
-                                        name="city"
-                                    ><!-- pattern="^\s*[^.a-z0-9àáâãäåçèéêëìíîïðòóôõöùúûüýÿ]+\s*$" disabled autofocus> -->
-                                    <select class="form-control cities" id="inputcities"
-                                        name="city"
-                                    >
-                                        <option value="Select your city">Sélectionnez votre commune</option>
-                                    </select>
-                                    {% if error_city %}
-                                    <span class="d-block">
-                                        <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                                        <span class="form-error-message">Le nom d'une commune ne peut contenir que des lettres, et lettres accentuées.</span>
-                                    </span>
-                                    {% endif %}
-                                </div>
-                                &ensp;
-                                <div class="col-12 col-md-4">
-                                    <label class="required" for="inputzip">CP :</label>
-                                    <input type="text" {% if zip is not null %}value="{{ zip }}"{% endif %}
-                                        name="zip" id="inputzip" class="form-control inputzip" pattern="[0-9]{5}" size="5"
-                                        disabled
-                                    ><!-- requiredautofocus> -->
-                                    {#{% if error_zip %}#}
-                                    <!-- <span class="d-block">
-                                        <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                                        <span class="form-error-message">Le numéro ne peut contenir que des chiffres.</span>
-                                    </span> -->
-                                    {#{% endif %}#}
-                                </div>
-                            </div>
-                        </div>
-                        <br>
-                    </div>
-                </div>
-                
+                <!-- Common Form to edit Company object -->
+                {{ include('company/_form-company.html.twig') }}
+
                 <!-- Block de données propres au pilote -->
                 <div class="mt-1 mb-2 col-12 col-lg-7" id="blk--driverdatas">
                     <!-- Titre -->
@@ -221,11 +51,11 @@
                     <div class="block--datas-horizontal" id="block--file-VMDTR-card">
                         <div class="d-flex flex-column col-12"><!-- col-lg-5 -->
                             <label class="required" for="inputvmdtrnumber">Numéro :</label>
-                            <input type="text" {% if vmdtr_number is not null %}value="{{ vmdtr_number }}"{% endif %} placeholder="11 chiffres..." pattern="[0-9]{11}" name="vmdtr_number" id="inputvmdtrnumber" class="form-control" size="11" required ><!-- autofocus> -->
+                            <input type="text" {% if vmdtr_number is not null %}value="{{ vmdtr_number }}"{% endif %} placeholder="11 chiffres..." pattern="[\d]{11}" name="vmdtr_number" id="inputvmdtrnumber" class="form-control" size="11" required ><!-- autofocus> -->
                             {#{% if error_vmdtrnumber %}#}
                             <!-- <span class="d-block">
-                                <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                                <span class="form-error-message">Le numéro ne peut contenir que des chiffres.</span>
+                                <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                                <small class="form-error-message">Le numéro ne peut contenir que des chiffres.</small>
                             </span> -->
                             {#{% endif %}#}
                             <br>
@@ -234,8 +64,8 @@
                             <input type="date" {% if vmdtr_validity is not null %}value="{{ vmdtr_validity }}"{% endif %} name="vmdtr_validity" id="inputvmdtrvalidity" class="form-control" required ><!-- autofocus> -->
                             {#{% if error_vmdtrvalidity %}#}
                             <!-- <span class="d-block">
-                                <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                                <span class="form-error-message">La date ne peut contenir que des chiffres.</span>
+                                <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                                <small class="form-error-message">La date ne peut contenir que des chiffres.</small>
                             </span> -->
                             {#{% endif %}#}
                             <br>
@@ -247,8 +77,8 @@
                             ><!-- autofocus> -->
                             {#{% if error_motomodel %}#}
                             <!-- <span class="d-block">
-                                <span class="form-error-icon badge badge-danger text-uppercase">Error</span>
-                                <span class="form-error-message">La date ne peut contenir que des chiffres.</span>
+                                <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                                <small class="form-error-message">La date ne peut contenir que des chiffres.</small>
                             </span> -->
                             {#{% endif %}#}
                             <br>
@@ -258,6 +88,7 @@
                             <label for="browse">
                                 <img class="imgbtn--profile" src="{{ asset(sImgPath ~'no-image.png') }}" alt="">
                             </label>
+                            <!-- VALUE NE SERT A RIEN AVEC UN INPUT TYPE FILE, MAIS BON... -->
                             <input class="required" type="file" name="file" id="browse"
                                 {% if drivercard is not null %}
                                 value="{{ asset(drivercard.pathname) }}"
@@ -298,12 +129,10 @@
             <!-- Boutons de sortie -->
             <div class="btns--row mb-2">
                 <button class="btn btn-sm btn--blue" type="submit">
-                    <i class="ri-record-circle-line"></i>
-                    Créer le compte
+                    <i class="ri-record-circle-line"></i>&ensp;Créer le compte
                 </button>
                 <a class="btn btn-bg btn--secondary btn-return" href="{{ path('profile_user',{'id': app.user.id}) }}">
-                    <i class="ri-close-fill"></i>
-                    Annuler
+                    <i class="ri-close-fill"></i>&ensp;Annuler
                 </a>
             </div>
             <!-- <a href="https://www.francecompetences.fr/recherche/rs/3864/">Consulter les Conditions Générales d'Utilisation</a> -->
