--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -19,16 +19,14 @@
 
         <div class="d-flex flex-row flex-wrap justify-content-between">
             <button type="submit" class="btn btn-sm btn--blue">
-                <i class="ri-record-circle-line"></i>
-                Créer le compte
+                <i class="ri-record-circle-line"></i>&ensp;Créer le compte
             </button>
             {% if app.user is null %}
             <div class="d-flex flex-row flex-wrap justify-content-between align-items-center">
                 Vous avez déjà un compte ?
                 &ensp;
                 <a class="btn btn-bg btn--secondary" href="{{ path('app_login') }}">
-                    <i class="ri-login-box-line"></i>
-                    Se connecter
+                    <i class="ri-login-box-line"></i>&ensp;Se connecter
                 </a>
             </div>
             {% endif %}
